--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head> 
-    <title>Robert Bolgar Developer</title>
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <title>Robert Bolgar - My Projects</title>
   </head>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+  <body>
+    <h1>Welcome to my GitHub Projects Page</h1>
+    <p>Here's a list of my recent projects:</p>
+    <ul>
+      <li><a href="https://github.com/robertbolgar/project1">Project 1</a></li>
+      <li><a href="https://github.com/robertbolgar/project2">Project 2</a></li>
+      <li><a href="https://github.com/robertbolgar/project3">Project 3</a></li>
+    </ul>
+  </body>
 </html>
