--- a/referral/index.html
+++ b/referral/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Join the Content Revolution: NFTs, Rewards, and Beyond!</h1>
+        <h1>Content Licensing Evolved: Own, Trade, Earn with $PLRT</h1>
     </header>
 
     <main>
