--- a/referral/index.html
+++ b/referral/index.html
@@ -13,13 +13,13 @@
 
     <main>
         <section class="user-info">
-            <h2>Transform Your Content into Assets with PLRT</h2>
+            <h2>Transform Your Content into Valuable Assets with #PLRT</h2>
             <p>PLRT is not just a token; it's a gateway to innovating how PLR content is owned, traded, and valued:</p>
 <ul>
-    <li><strong>Connect Your Wallet:</strong> Step into a future where your content and referrals unlock new dimensions of rewards.</li>
-    <li><strong>Instant Reward:</strong> Receive 1 PLRT token instantly upon connecting.</li>
-    <li><strong>Grow the Community:</strong> Earn 3 more PLRT tokens for every new visionary joining us through your referral.</li>
-    <li><strong>Start Your Journey:</strong> The journey to redefine digital ownership and rewards starts now!</li>
+    <li><strong>Connect Your Wallet:</strong> Unlock a world of possibilities with just a few clicks.</li>
+    <li><strong>Get an Instant Reward:</strong> Receive 1 PLRT token by simply connecting your wallet.</li>
+    <li><strong>Spread the word:</strong> Share your unique referral link and earn 3 PLRT for every friend who connects..</li>
+    
 </ul>
 
             <div class="info-item">
