--- a/referral/index.html
+++ b/referral/index.html
@@ -13,7 +13,7 @@
 
     <main>
         <section class="user-info">
-            <h2>Transform Your Content into Valuable Assets with #PLRT</h2>
+            <h2>Transform Your Content into Valuable Assets with $PLRT</h2>
             <p>PLRT is not just a token; it's a gateway to innovating how PLR content is owned, traded, and valued:</p>
 <ul>
     <li><strong>Connect Your Wallet:</strong> Unlock a world of possibilities with just a few clicks.</li>
