--- a/referral/index.html
+++ b/referral/index.html
@@ -23,7 +23,7 @@
 </ul>
 
             <div class="info-item">
-                <label>🔗 Your Key to the Future - Your Referral Link:</label>
+                <label>🔗 Your Special Referral Link:</label>
                 <input type="text" id="referral-link" value="https://www.plrtoken.com/ref?user=example" readonly>
                 <button onclick="copyLink()" class="button">Copy Link</button>
             </div>
