--- a/referral/cryptopeep.html
+++ b/referral/cryptopeep.html
@@ -35,11 +35,11 @@
             <h2>Measure Your Digital Legacy</h2>
             <div class="stats-item">
                 <p>🌐 Network Expansion:</p>
-                <span>0</span> <!-- Dynamically updated -->
+                <span>0</span> <!-- This will be dynamically updated -->
             </div>
             <div class="stats-item">
                 <p>📈 Earnings Growth:</p>
-                <span>0 PLRT</span> <!-- Dynamically updated -->
+                <span>0 PLRT</span> <!-- This will be dynamically updated -->
             </div>
         </section>
 
