--- a/referral/cryptopeep.html
+++ b/referral/cryptopeep.html
@@ -2,53 +2,54 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>License Content with Crypto: Earn with $PLRT</title>
+    <meta viewport="width=device-width, initial-scale=1.0">
+    <title>$PLRT: Authentic Value for Real Investors</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Redefine Content Licensing: Earn, Own, Trade with $PLRT</h1>
+        <h1>Unlock Real Value in Content Licensing with $PLRT</h1>
     </header>
 
     <main>
         <section class="user-info">
-            <h2>Revolutionize Content Licensing Through Blockchain</h2>
-            <p>Introducing $PLRT, the groundbreaking platform where content licensing meets crypto and NFTs. Discover a new realm where your content isn't just shared—it's an asset that earns, owns, and trades:</p>
-<ul>
-    <li><strong>Instant Connection, Instant Reward:</strong> Link your wallet and immediately receive 1 PLRT token. It’s that simple.</li>
-    <li><strong>Share and Earn More:</strong> For every friend who connects through your referral, you earn 3 PLRT tokens. Your network’s growth fuels your success.</li>
-</ul>
+            <h2>Content Licensing Reimagined for the Blockchain Era</h2>
+            <p>We're here to offer a beacon of hope in a space too often clouded by hype. $PLRT isn't a promise; it's a proven system, providing real value by revolutionizing how content is licensed, owned, and traded using blockchain technology.</p>
+            <ul>
+                <li><strong>Connect Your Wallet:</strong> Experience real potential with just one click.</li>
+                <li><strong>Instant Reward:</strong> Receive 1 PLRT token upon connection, because true value doesn't wait.</li>
+                <li><strong>Share the Vision:</strong> Earn 3 PLRT tokens for each friend who connects through your referral, building value together.</li>
+            </ul>
 
             <div class="info-item">
-                <label>🔑 Your Gateway to Licensing Freedom - Your Referral Link:</label>
+                <label>🔗 Your Path to True Rewards - Your Referral Link:</label>
                 <input type="text" id="referral-link" value="https://www.plrtoken.com/ref?user=example" readonly>
-                <button onclick="copyLink()" class="button">Copy & Propel</button>
+                <button onclick="copyLink()" class="button">Copy & Share Truth</button>
             </div>
-            <p>Be at the forefront of a community that's reshaping how digital content is valued and exchanged.</p>
-            <button onclick="followOnTwitter()" class="button">Join the Vanguard</button>
-            <button onclick="shareOnTwitter()" class="button">Expand the Revolution</button>
-            <p class="share-incentive"><strong>Forge Your Path:</strong> Tap into a 3 million token reserve set aside for our early adopters. Your pioneering actions today pave the way for tomorrow's success in the $PLRT ecosystem.</p>
+            <p>Join a community focused on creating lasting value in the digital content landscape.</p>
+            <button onclick="followOnTwitter()" class="button">Follow Our Journey</button>
+            <button onclick="shareOnTwitter()" class="button">Spread Real Hope</button>
+            <p class="share-incentive"><strong>Invest in Integrity:</strong> A reserve of 3 million tokens is ready for those who value authenticity and action in the $PLRT ecosystem.</p>
         </section>
         
         <section class="referral-stats">
-            <h2>Measure Your Digital Legacy</h2>
+            <h2>Empower Your Influence</h2>
             <div class="stats-item">
-                <p>🌐 Network Expansion:</p>
-                <span>0</span> <!-- This will be dynamically updated -->
+                <p>👥 Empowered Community:</p>
+                <span>0</span> <!-- Dynamically update this based on actual data -->
             </div>
             <div class="stats-item">
-                <p>📈 Earnings Growth:</p>
-                <span>0 PLRT</span> <!-- This will be dynamically updated -->
+                <p>💰 Earnest Vault:</p>
+                <span>0 PLRT</span> <!-- Dynamically update this based on actual data -->
             </div>
         </section>
 
         <section class="tips">
-            <h2>Lead the Charge in the $PLRT Ecosystem</h2>
+            <h2>Build With Belief in the $PLRT Ecosystem</h2>
             <ul>
-                <li>Evangelize how $PLRT is pioneering the integration of content licensing with blockchain technology and NFTs.</li>
-                <li>Maximize your impact by leveraging every social platform to highlight the transformative potential of $PLRT for creators, consumers, and traders alike.</li>
-                <li>Stay engaged and informed; your insights and contributions can shape the future of digital content monetization.</li>
+                <li>Communicate the change; illustrate how $PLRT is crafting a new chapter in content monetization with blockchain's trust and transparency.</li>
+                <li>Use your influence wisely on every platform to advocate for a shift towards genuine, sustainable digital content economics.</li>
+                <li>Engage meaningfully; your insight and foresight can drive the community towards collective success and innovation.</li>
             </ul>
         </section>
         <script src="custom-script.js"></script>
@@ -64,7 +65,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 PLRT Token. Pioneering Content Licensing in the Crypto Age.</p>
+        <p>&copy; 2024 PLRT Token. Grounded in Reality, Soaring with Integrity.</p>
     </footer>
 </body>
 </html>
