--- a/referral/claim.html
+++ b/referral/claim.html
@@ -6,6 +6,7 @@
     <title>PLRT Token Withdrawal</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/@metamask/detect-provider@1.0.0/dist/index.min.js"></script>
+    <!-- Including ethers.js library -->
     <script src="https://cdn.jsdelivr.net/npm/ethers/dist/ethers.min.js"></script>
 </head>
 <body>
@@ -25,50 +26,8 @@
             <p id="withdrawalStatus"></p>
         </section>
         
+        <!-- Custom Script -->
         <script src="custom-script.js"></script>
-        <script>
-            const contractAddress = "YOUR_SMART_CONTRACT_ADDRESS";
-            const contractABI = ABI_OF_YOUR_CONTRACT;
-
-            async function connectWallet() {
-                const provider = await detectEthereumProvider();
-                if (provider) {
-                    try {
-                        const accounts = await provider.request({ method: 'eth_requestAccounts' });
-                        const account = accounts[0];
-                        document.getElementById('walletAddress').innerText = account;
-                        document.getElementById('walletAddressDisplay').style.display = 'block';
-                        document.getElementById('withdrawTokensButton').style.display = 'block';
-                    } catch (error) {
-                        console.error(error);
-                    }
-                } else {
-                    console.log('Please install MetaMask!');
-                }
-            }
-
-            async function withdrawTokens() {
-                const provider = new ethers.providers.Web3Provider(window.ethereum);
-                const signer = provider.getSigner();
-                const contract = new ethers.Contract(contractAddress, contractABI, signer);
-
-                try {
-                    const tx = await contract.withdrawTokens(); // Assuming `withdrawTokens` is the function in your contract
-                    await tx.wait();
-                    document.getElementById('withdrawalStatus').innerText = 'Withdrawal successful!';
-                } catch (error) {
-                    console.error(error);
-                    document.getElementById('withdrawalStatus').innerText = 'Withdrawal failed. See console for details.';
-                }
-            }
-
-            document.getElementById('connectWalletButton').addEventListener('click', connectWallet);
-            document.getElementById('withdrawTokensButton').addEventListener('click', withdrawTokens);
-
-            window.addEventListener('load', async () => {
-                // Additional initialization if needed
-            });
-        </script>
     </main>
 
     <footer>
