--- a/referral/claim.html
+++ b/referral/claim.html
@@ -8,6 +8,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@metamask/detect-provider@1.0.0/dist/index.min.js"></script>
     <!-- Including ethers.js library -->
     <script src="https://cdn.jsdelivr.net/npm/ethers/dist/ethers.min.js"></script>
+    <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js"></script>
+
 </head>
 <body>
     <header>
