--- a/referral/claim.html
+++ b/referral/claim.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLRT Token Withdrawal</title>
+    <title>PLRT Team Token Withdrawal</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/@metamask/detect-provider@1.0.0/dist/index.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/ethers/dist/ethers.min.js"></script>
@@ -50,8 +50,8 @@
             <p id="withdrawalStatus"></p>
         </section>
         
-        <!-- Custom Script -->
-        <script src="custom-script.js"></script>
+  <!-- Reference to External Custom Script -->
+    <script src="custom-script.js"></script>
     </main>
 
     <footer>
