--- a/referral/claim.html
+++ b/referral/claim.html
@@ -23,6 +23,15 @@
             <button id="withdrawTokensButton" class="button" style="display: none;">Withdraw Tokens</button>
             <p id="withdrawalStatus"></p>
         </section>
+
+        <!-- Vesting Details Display -->
+        <section id="vestingDetailsDisplay" class="info-item" style="display: none;">
+            <h3>Vesting Details:</h3>
+            <p><strong>Total Allocation:</strong> <span id="totalAllocation"></span> PLRT</p>
+            <p><strong>Amount Withdrawn:</strong> <span id="amountWithdrawn"></span> PLRT</p>
+            <p><strong>Vesting Start:</strong> <span id="vestingStart"></span></p>
+            <p><strong>Last Withdrawal:</strong> <span id="lastWithdrawal"></span></p>
+        </section>
     </main>
 
     <footer>
