--- a/referral/claim.html
+++ b/referral/claim.html
@@ -38,7 +38,9 @@
         <p>&copy; 2024 PLRT Token. Redefining Digital Content & Rewards.</p>
     </footer>
 
-    <!-- Reference to External Custom Script -->
-    <script src="custom-script.js"></script>
+
+    <!-- At the bottom of your body tag -->
+<script type="module" src="custom-script.js"></script>
+
 </body>
 </html>
