--- a/referral/claim.html
+++ b/referral/claim.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PLRT Team Token Withdrawal</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.jsdelivr.net/npm/@metamask/detect-provider@1.0.0/dist/index.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/ethers/dist/ethers.min.js"></script>
 </head>
 <body>
     <header>
@@ -38,9 +36,8 @@
         <p>&copy; 2024 PLRT Token. Redefining Digital Content & Rewards.</p>
     </footer>
 
-
-    <!-- At the bottom of your body tag -->
-<script type="module" src="custom-script.js"></script>
-
+    <!-- Reference to External Custom Script -->
+    <!-- Ensure custom-script.js is treated as a module -->
+    <script type="module" src="custom-script.js"></script>
 </body>
 </html>
