--- a/referral/claim.html
+++ b/referral/claim.html
@@ -29,6 +29,9 @@
             <p><strong>Available to Withdraw:</strong> <span id="availableToWithdraw"></span> PLRT</p>
             <p><strong>Vesting Start:</strong> <span id="vestingStart"></span></p>
             <p><strong>Last Withdrawal:</strong> <span id="lastWithdrawal"></span></p>
+            <p><strong>Tokens available for withdrawal:</strong> <span id="availableToWithdraw"></span></p>
+<p><strong>Days until next withdrawal:</strong> <span id="daysUntilNextWithdrawal"></span></p>
+
         </section>
     </main>
 
