--- a/referral/claim.html
+++ b/referral/claim.html
@@ -13,7 +13,7 @@
 
     <main>
         <section class="wallet-connect">
-            <h2>Connect Your Wallet to Withdraw PLRT Tokens</h2>
+            <h2 id="connectWalletText">Connect Your Wallet to Withdraw PLRT Tokens</h2>
 <button id="connectWalletButton" class="button">Connect Wallet</button>
 
             
