--- a/referral/claim.html
+++ b/referral/claim.html
@@ -21,6 +21,13 @@
                 <label>Your Connected Wallet Address:</label>
                 <span id="walletAddress"></span>
             </div>
+
+<div id="vestingDetailsDisplay" style="display: none;">
+    <p id="vestingStart"></p>
+    <p id="lastWithdrawal"></p>
+    <p id="availableToWithdraw"></p>
+    <p id="daysUntilNextWithdrawal"></p>
+</div>
             
         </section>
 
