--- a/referral/claim.html
+++ b/referral/claim.html
@@ -49,7 +49,7 @@
     <footer>
         <p>&copy; 2024 PLRT Token. Redefining Digital Content & Rewards.</p>
     </footer>
-
+    <script type="module" src="utils.js"></script>
     <script type="module" src="custom-script.js"></script>
 </body>
 </html>
