--- a/referral/claim.html
+++ b/referral/claim.html
@@ -37,13 +37,10 @@
             <button id="withdrawTokensButton" class="button">Withdraw Tokens</button>
             <p id="withdrawalStatus"></p>
 
-            <div id="vestingDetailsDisplay" style="display: none;">
-    <p id="vestingStart"></p>
-    <p id="lastWithdrawal"></p>
-    <p id="availableToWithdraw"></p>
-    <p id="daysUntilNextWithdrawal"></p>
-</div>
-          
+    
+          <button id="actionButton">Click Me</button>
+<div id="messageBox"></div> <!-- Placeholder for messages -->
+
 
         </section>
     </main>
