--- a/referral/claim.html
+++ b/referral/claim.html
@@ -21,6 +21,9 @@
                 <label>Your Connected Wallet Address:</label>
                 <span id="walletAddress"></span>
             </div>
+          <button id="actionButton">Click Me</button>
+            <div id="messageBox"></div> <!-- Placeholder for messages -->
+            <div id="loadingIndicator" style="display: none;">Loading...</div>
 
   
         </section>
@@ -36,12 +39,6 @@
             <p><strong>Days until next withdrawal:</strong> <span id="daysUntilNextWithdrawal"></span></p>
             <button id="withdrawTokensButton" class="button">Withdraw Tokens</button>
             <p id="withdrawalStatus"></p>
-
-    
-          <button id="actionButton">Click Me</button>
-<div id="messageBox"></div> <!-- Placeholder for messages -->
-
-
         </section>
     </main>
 
