--- a/referral/claim.html
+++ b/referral/claim.html
@@ -22,6 +22,8 @@
                 <span id="walletAddress"></span>
             </div>
         
+            <button id="fetchButton">Fetch Data</button>
+<button id="actionButton">Action</button>
   
         </section>
 
