--- a/referral/claim.html
+++ b/referral/claim.html
@@ -21,9 +21,6 @@
                 <label>Your Connected Wallet Address:</label>
                 <span id="walletAddress"></span>
             </div>
-        
-            <button id="fetchButton">Fetch Data</button>
-<button id="actionButton">Action</button>
   
         </section>
 
@@ -42,7 +39,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 PLRT Token. Redefining Digital Content & Rewards.</p>
+        <p>&copy; 2024 PLRT Token. Redefining Licensed Digital Content.</p>
     </footer>
     <script type="module" src="utils.js"></script>
     <script type="module" src="custom-script.js"></script>
