--- a/bonus/index.html
+++ b/bonus/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Sales Page</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <h1>Amazing Digital Product</h1>
