--- a/bonus/index.html
+++ b/bonus/index.html
@@ -5,12 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Sales Page</title>
     <link rel="stylesheet" href="style.css">
-
 </head>
 <body>
-    <h1>Amazing Digital Product</h1>
-    <p>Description of your digital product goes here.</p>
-    <a id="buyButton" href="default-affiliate-link">Buy Now</a>
+    <h1>Ultimate Web Design Toolkit</h1>
+    <p>Welcome to the Ultimate Web Design Toolkit, your one-stop solution for crafting beautiful, responsive websites with ease. Whether you're a seasoned professional or just starting out, our toolkit offers a comprehensive collection of tools, templates, and resources designed to streamline your design process.</p>
+    
+    <p>Features include:</p>
+    <ul>
+        <li>Responsive Templates: Ready-to-use website templates that automatically adjust to any screen size.</li>
+        <li>UI Components: A wide array of customizable UI elements to enhance the user experience.</li>
+        <li>Design Assets: High-quality images, icons, and fonts to bring your designs to life.</li>
+        <li>Productivity Tools: Software and guides to boost efficiency and creativity.</li>
+    </ul>
+    
+    <p>Don't miss out on the opportunity to transform your web design workflow and produce stunning results with minimal effort. Get your toolkit today!</p>
+    <a id="buyButton" class="button" href="default-affiliate-link">Buy Now</a>
 
     <script>
         const queryParams = new URLSearchParams(window.location.search);
