--- a/bonus/index.html
+++ b/bonus/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Header -->
+    <header class="site-header">
+        <h1>Your Brand Name</h1>
+    </header>
     <h1>Ultimate Web Design Toolkit</h1>
     <p>Welcome to the Ultimate Web Design Toolkit, your one-stop solution for crafting beautiful, responsive websites with ease. Whether you're a seasoned professional or just starting out, our toolkit offers a comprehensive collection of tools, templates, and resources designed to streamline your design process.</p>
     
@@ -28,5 +32,10 @@
             document.getElementById('buyButton').href = affiliateLink;
         }
     </script>
+
+     <!-- Footer -->
+    <footer class="site-footer">
+        <p>© Your Brand Name - All Rights Reserved</p>
+    </footer>
 </body>
 </html>
