--- a/bonus/index.html
+++ b/bonus/index.html
@@ -22,11 +22,18 @@
       <tr>
         <td>
         <div class="contentbox">
-            <h1 align="center" class="headline">Exclusive Bonus Offer</h1>
-            <p>Unlock your exclusive bonus today by purchasing through our special link!</p>
-            <div class="button" align="center">
-                <a href="default-affiliate-link" id="buyButton" class="button">Buy Now</a>
+            <h1 align="center" class="headline">Discover the Secrets to Mastering Digital Photography!</h1>
+            <p>Are you ready to take your photography skills to the next level? Our comprehensive guide, <strong>"Digital Photography Mastery,"</strong> is packed with expert tips, techniques, and secrets that will help you capture stunning images like never before.</p>
+            <ul>
+                <li>Unlock the potential of your DSLR, mirrorless, or smartphone camera.</li>
+                <li>Learn composition techniques that turn ordinary shots into breathtaking art.</li>
+                <li>Master post-processing skills to enhance your photos with ease.</li>
+            </ul>
+            <p>Whether you're a beginner or an experienced photographer looking to refine your skills, this guide is your key to unlocking a new level of creativity and confidence in your photography journey.</p>
+            <div align="center">
+                <a href="default-affiliate-link" id="buyButton" class="button">Buy Now and Get Instant Access!</a>
             </div>
+            <p align="center" style="margin-top: 20px;">Don't miss out on this exclusive offer. Transform your photography skills today!</p>
         </div>
         <script>
             // Function to update the buy button link based on the affiliate query parameter
