--- a/bonus/affiliate.html
+++ b/bonus/affiliate.html
@@ -25,6 +25,7 @@
             <h1 align="center" class="subheadline">Affiliate Link Generator</h1>
             <p>Enter your affiliate link below to generate your custom sales page link.</p>
             <form id="affiliateForm" class="affiliate-form">
+              <p>Enter your affiliate link below to generate your custom sales page link.</p>
                 <input type="text" id="affiliateLink" class="form-input" placeholder="Enter your link here" style="width: 100%; max-width: 600px; display: block; margin: 0 auto 20px;">
                 <button type="submit" class="button">Generate</button>
             </form>
