--- a/bonus/affiliate.html
+++ b/bonus/affiliate.html
@@ -25,7 +25,7 @@
             <h1 align="center" class="subheadline">Affiliate Link Generator</h1>
           
             <form id="affiliateForm" class="affiliate-form">
-              <p>Enter your affiliate link below to generate your custom sales page link.</p>
+              <p>Enter your affiliate link below to generate your custom Bonus page link.</p>
                 <input type="text" id="affiliateLink" class="form-input" placeholder="Enter your link here" style="width: 100%; max-width: 600px; display: block; margin: 0 auto 20px;">
                 <button type="submit" class="button">Generate</button>
             </form>
@@ -33,7 +33,7 @@
 
           <!-- Container for the generated link and copy button -->
 <div id="linkContainer" style="display:none; margin-top: 20px;">
-    <p id="linkExplanation">Here is your custom affiliate link. Click the button to copy it:</p> <!-- Explanatory text -->
+    <p id="linkExplanation">Here is your custom affiliate link. Click button to copy:</p> <!-- Explanatory text -->
     <input type="text" id="generatedLink" class="form-input" readonly style="margin-bottom: 10px;">
     <button type="button" id="copyButton" class="button">Copy Link</button>
 </div>
