--- a/bonus/affiliate.html
+++ b/bonus/affiliate.html
@@ -45,12 +45,16 @@ document.addEventListener('DOMContentLoaded', function() {
     const linkContainer = document.getElementById('linkContainer'); // Container for the generated link
     const inputLink = document.getElementById('affiliateLink');
     const copyButton = document.getElementById('copyButton');
+    const currentURL = window.location.origin;
+
 
     form.addEventListener('submit', function(e) {
         e.preventDefault(); // Prevents the form from submitting in the traditional manner
         
         // Construct the custom link with a generic query parameter ('ref')
-        const generatedLink = `index.html?ref=${encodeURIComponent(inputLink.value)}`;
+       const generatedLink = `${currentURL}/bonus/index.html?ref=${encodeURIComponent(inputLink.value)}`;
+
+
         
         // Show the link container and set the generated link as the value of the input
         linkContainer.style.display = 'block';
